--- a/article/公开部分我与学校沟通的邮件.md
+++ b/article/公开部分我与学校沟通的邮件.md
@@ -1,12 +1,91 @@
 #
-计划中,我选择公开的话题会更新全部我向学校发出的新内容,如果涉及隐私可能会做涂黑处理.
+计划中,我选择公开的话题会更新全部我向学校发出的新内容,如果涉及隐私可能会做涂黑处理.原文如果发现typo可能会更正.
 
 # Index
 
-[4me.com request: Request to modify my login security options](#4mecom-request-to-modify-my-login-security-options)
+* [4me.com: 2024, Stolen account](#4mecom-2024-stolen-account)
+* [4me.com: 2024, Request to modify my login security options](#4mecom-2024-request-to-modify-my-login-security-options)
+
+# 4me.com: 2024, Stolen account
+## 21 Mar, Me
+
+Dear Decanato, Dear IT Support Team,
+
+Hope your works are progressing well. I found evidence of someone else was using my USI email account this morning. A Swisscare worker said that they received an empty email from me at 10:26 of this morning but I can confirm and I am certain that I was not using my email at that time. I hope USI can help me to investigate this problem. Could you please give me some advices on this problem?
+
+Best regards,
+Bin Yong
+
+## 22 Mar, ZA
+ 
+Hi @Bin Yong,
 
 
-# 4me.com: Request to modify my login security options
+
+We are investigating your issue. In the meantime, could you please reset the password for your account?
+
+
+
+I have attached the guide for your reference.
+
+
+
+I remain at your disposal.
+
+
+
+Have a great day,
+██████████████
+
+## 25 Mar, Me
+ 
+Hi,
+I have changed the password. However, without knowing the method they used to steal my account/token, merely change the password may not solve the problem.
+
+## 26 Mar, ZA
+ 
+Hi @Bin Yong,
+
+I've spoken with one of our specialists, and from that email, it cannot be inferred that it was sent from our system. You should verify with SwissCare.
+
+Have a good day,
+██████████████
+
+## 26 Mar, Me
+ 
+Hi @██████████████,
+Thank you for the information.
+I am also very into information security things and I have learned a lot about it. I hope you can give me some information so I can do some investigation by myself. I hope you can give me a full-detailed operation/login logs about my account of that day. Could you please tell me what do you have as the log?
+## 30 Mar, Me
+ 
+Hi @██████████████,
+
+
+I just noticed that there could be some misunderstanding between us. I did not assume that the attacker was using the USI network. What I do assume is that the attacker may left some operation logs that is visible to Microsoft that can be found from outlook management page. I would be appricated if you can give me such logs.
+
+
+Best regards,
+bin yong
+
+
+## 17 Apr, ZA
+ 
+Hi @Bin Yong,
+
+
+
+Unfortunately, we cannot provide further information regarding this for security reasons.
+
+
+
+I remain available for any further information.
+
+
+
+Best regards,
+
+
+# 4me.com: 2024, Request to modify my login security options
 ## 10 Apr, Me
 Hi,
 
@@ -38,3 +117,4 @@ In case you misunderstood me. My request is not a suggestion to general profile 
 
 Best,
 Bin
+
