--- a/article/公开部分我与学校沟通的邮件.md
+++ b/article/公开部分我与学校沟通的邮件.md
@@ -3,8 +3,43 @@
 
 # Index
 
+* [Email: 2024, Meeting about reported inappropriate behavior](#email-2024-meeting-about-reported-inappropriate-behavior)
 * [4me.com: 2024, Stolen account](#4mecom-2024-stolen-account)
 * [4me.com: 2024, Request to modify my login security options](#4mecom-2024-request-to-modify-my-login-security-options)
+
+
+# Email: 2024, Meeting about reported inappropriate behavior
+
+## Yong Bin, Sent: Wednesday, May 8, 2024 11:56 PM
+To: Blumer Marvin <marvin.blumer@usi.ch>
+
+Cc: MR
+ 
+Dear Mr. Blumer,
+
+Hope your works are progressing well. I hope to make some corrections about the reports you received and to repeat some facts that I have told during the meeting. 
+
+First, about what happened yesterday. I do looked at that person and it may make him uncomfortable. However, there are reasons. Sometimes, someone starts to use the toilet next to me while I was using one, and they always quickly leave the room when I start to clean myself. Most of the time, they do not flush but they can still leave a clean toilet. Yesterday, it was the person who I looked at. I also want to point out that, when he reported to the security, I never touched his belongings and I did not talk to him.
+
+About the day before yesterday. I want to point out following things.
+1. That person was the person who started to use loud volume to watch videos, not me. Other students maybe unable to correctly identify who was playing the video because I was sitting next to him. 
+2. That person asked me to leave that table and I refused. After that, he grabed my bag and tried to take it away,  but I stopped him. He was also pushing my things away. I recorded that part and I can share it to you if you want.
+3. At that night, a security entered the room and left without saying anything. When he entered the room, that person was playing his video very loudly.
+4. I played music with about the same volume after he played his videos very loud. (Other students have already left the room at the time) He asked me to stop the music because he is having a Zoom meeting with a professor. However, it was about 00:00 of the night, and it was a multi person meeting on his phone, I have never heard of USI professors would held a meeting at that time. I stopped the music and asked him to use headphones but he refused.
+5. One or even more of the students who reported that event was the friends of the student who reported me earlier. I assume they have the incentive to report me when they find a chance.
+
+About the reports from the security guy and other reports.
+
+They are wrong, I have never deliberately sat right in front of a female student while there are more than 40 empty tables in the room. I also have never shout to a Chinese female student. I also feel strange about such reports because when it happens, if I was the security, I would come to stop me, but they never did.
+
+I hope to have a full list of the inappropriate behavior reports of me, so I can make some corrections to the report. I may also find the person who was at the same classroom to ask them to help me prove that I was innocent. I might also be able to point out where the report is unreasonable.
+
+As for meeting doctors, if they allow me to film and publish the meeting, I may accept it.
+
+Best regards,
+
+Bin Yong
+
 
 # 4me.com: 2024, Stolen account
 ## 21 Mar, Me
