--- a/article/公开部分我与学校沟通的邮件.md
+++ b/article/公开部分我与学校沟通的邮件.md
@@ -3,12 +3,12 @@
 
 # Index
 
-* [Email: 2024, Meeting about reported inappropriate behavior](#email-2024-meeting-about-reported-inappropriate-behavior)
+* [Email: 2024, Meeting about reported inappropriate behaviors](#email-2024-meeting-about-reported-inappropriate-behavior)
 * [4me.com: 2024, Stolen account](#4mecom-2024-stolen-account)
 * [4me.com: 2024, Request to modify my login security options](#4mecom-2024-request-to-modify-my-login-security-options)
 
 
-# Email: 2024, Meeting about reported inappropriate behavior
+# Email: 2024, Meeting about reported inappropriate behaviors
 
 ## Yong Bin, Sent: Wednesday, May 8, 2024 11:56 PM
 To: Blumer Marvin <marvin.blumer@usi.ch>
