--- a/article/公开部分我与学校沟通的邮件.md
+++ b/article/公开部分我与学校沟通的邮件.md
@@ -40,6 +40,13 @@ Best regards,
 
 Bin Yong
 
+## Blumer Marvin , Sent: Monday, May 13, 2024 8:06 PM
+
+To: Yong Bin <bin.yong@usi.ch>
+
+Cc: MRx
+
+`warned me not to disturb others again and talked about visitingx doctor`
 
 # 4me.com: 2024, Stolen account
 ## 21 Mar, Me
