--- a/article/公开部分我与学校沟通的邮件.md
+++ b/article/公开部分我与学校沟通的邮件.md
@@ -44,9 +44,42 @@ Bin Yong
 
 To: Yong Bin <bin.yong@usi.ch>
 
-Cc: MRx
+Cc: MR
 
-`warned me not to disturb others again and talked about visitingx doctor`
+`warned me not to disturb others again and talked about visiting doctor`
+
+## Yong Bin , Sent: Tuesday, May 14, 2024 12:18 AM
+To: Blumer Marvin <marvin.blumer@usi.ch>
+
+Cc: MR
+
+Dear Mr. Blumer,
+
+Thank you for the email. I acknowledge receipt of your warning. I repeat, I have never touched the belongings of others, or rather, I am the one whose belongings were damaged or stolen on campus, and possibly filmed. As for meeting doctors, if they allow me to film and publish the meeting, I may accept it. 
+
+I also want to report to about what happened yesterday, to help you understand the circumstances that I am experiencing. I lost consciousness several times yesterday and when I 'wake up' from one of them, I felt a slight pain in my little finger. I didn't care at first because the pain was mild, and I didn't take it seriously. However, the pain grew stronger and stronger until last night I found my fingers swollen. 
+This is how it looks last night
+
+![IMG_2854](https://github.com/YongBinnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn/blog/assets/127243543/396fa845-2385-4075-ac1c-08c63c1fc4e7)
+
+This is how it looks now.
+
+![IMG_2868](https://github.com/YongBinnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn/blog/assets/127243543/4cecdb0b-8030-463b-8954-22a27e482201)
+
+And this is how my finger looks normally.
+
+![](https://github.com/YongBinnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn/blog/blob/main/images/%E5%85%AC%E5%BC%80%E9%83%A8%E5%88%86%E6%88%91%E4%B8%8E%E5%AD%A6%E6%A0%A1%E6%B2%9F%E9%80%9A%E7%9A%84%E9%82%AE%E4%BB%B6/IMG_2869.png?raw=true)
+
+I've experienced this kind of hurting on campus several times before, and I haven't reported it to you because I did not witness the process, and because it usually heals in a few weeks. Reporting this to you also not expecting help, because the place it happened should be no camera and I myself, due to the loss of consciousness, did not see how it happened. I am trying to give you a better understanding of the situation.
+
+As for why I was saying that I was possibly filmed, this animated gif may explain. I have encountered many people who looked like making phone calls but also acting suspicious. This person kept changing the angle of his head to keep the back camera of the phone towards me.
+
+![](https://github.com/YongBinnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn/blog/blob/main/images/%E5%85%AC%E5%BC%80%E9%83%A8%E5%88%86%E6%88%91%E4%B8%8E%E5%AD%A6%E6%A0%A1%E6%B2%9F%E9%80%9A%E7%9A%84%E9%82%AE%E4%BB%B6/IMG_1405.gif?raw=true)
+
+Best regards,
+
+Bin Yong
+
 
 # 4me.com: 2024, Stolen account
 ## 21 Mar, Me
