--- a/article/公开部分我与学校沟通的邮件.md
+++ b/article/公开部分我与学校沟通的邮件.md
@@ -4,6 +4,7 @@
 # Index
 
 * [Email: 2024, Meeting about reported inappropriate behaviors](#email-2024-meeting-about-reported-inappropriate-behaviors)
+* [Email: 2021, Question about HW6](#email-2021-question-about-hw6)
 * [4me.com: 2024, Stolen account](#4mecom-2024-stolen-account)
 * [4me.com: 2024, Request to modify my login security options](#4mecom-2024-request-to-modify-my-login-security-options)
 
@@ -80,6 +81,31 @@ Best regards,
 
 Bin Yong
 
+
+# Email: 2021, Question about HW6
+
+## OMITTED
+
+## Yong Bin , Sent: Monday, 24 May 2021 11:55
+To: OMITTED
+
+Cc: OMITTED
+
+Dear Professor ████,
+
+ 
+
+I agree all of your three points about the problem. I think any information security efforts are about the cost of the attackers. Nothing is safe when an attacker has unlimited resources (which also means unlimited computing power and other stuff) . Providing information about the VM won’t let me 100 percent sure what I will be running is trustable but it could increase the cost of the attacker if there’s any. That is also why I’m saying “feel a little safer”. It is okay if you really don’t want to provide the information. Thanks.
+
+
+
+
+Best regards,
+
+Bin Yong 
+
+
+## OMITTED
 
 # 4me.com: 2024, Stolen account
 ## 21 Mar, Me
