--- a/article/公开部分我与学校沟通的邮件.md
+++ b/article/公开部分我与学校沟通的邮件.md
@@ -81,6 +81,46 @@ Best regards,
 
 Bin Yong
 
+## Yong Bin , Sent: Thursday, May 16, 2024 11:00 PM
+To: Blumer Marvin <marvin.blumer@usi.ch>
+
+Cc: MR
+
+Dear Mr. Blumer,
+
+It was nice to see you this evening. I was eating so I forgot to mention this when we met. Tonight, around 21:05, I asked a student to take a photo of her computer. She agreed with it and showed her computer to me. However, a security came to the classroom about a minute after I took the photo. The security asked the student some questions in Italian and I think I heard the word 'foto'. I don't know much Italian but at least I know 'foto' is 'photo' and their pronunciations are close. If I misunderstood, that's fine, but if the security asked about the photo, then I felt I was isolated. He should be able to see from cameras that I asked her before taking the photo and nobody was unhappy about that. If I interact with someone will cause them to be questioned by security, then other students will be scared of me. 
+
+I would definitely be happy about it if the security was checking out someone who opened my backpack without my permission, and I may write an email to specially thank him in that case, but what happened today makes me think he overreacted.
+
+Best regards,
+
+Bin Yong
+
+## MR, Sent: Wednesday, May 22, 2024 7:29 PM
+To: Yong Bin <bin.yong@usi.ch>; Blumer Marvin <marvin.blumer@usi.ch>
+
+`They want to help me to be at ease with dressing in the graduation ceremony`
+
+## Yong Bin, Sent: Thursday, May 23, 2024 3:28 AM
+
+Hi Rosalba,
+
+Thank you very much for offering this help. I appreciate it. I do want to look good during the ceremony and I like this opportunity, but, before accepting this help, I would like to know in what name it is offered. If it's to help someone who is financially broke, then I cannot accept it, because I can afford a formal dress. I am living a tight budget life because I am saving money. If the help is for other reasons,  I would like to know.
+
+If I am the right target of the help, I am glad to have you accompany. However, I may be unable to wake up that early. If you don't see me on 10:00 then my alarms fail to wake me up.
+
+Comparing to the clothes, I am caring more about my grades.
+
+Best regards,
+
+Bin Yong
+
+## MR, Sent: 
+## MR, Sent: 
+
+## Yong Bin, Sent: Sunday, May 26, 2024 12:48 AM
+
+
 
 # Email: 2021, Question about HW6
 
