--- a/article/公开部分我与学校沟通的邮件.md
+++ b/article/公开部分我与学校沟通的邮件.md
@@ -103,7 +103,7 @@ To: Yong Bin <bin.yong@usi.ch>; Blumer Marvin <marvin.blumer@usi.ch>
 
 ## Yong Bin, Sent: Thursday, May 23, 2024 3:28 AM
 
-Hi Rosalba,
+Hi ████,
 
 Thank you very much for offering this help. I appreciate it. I do want to look good during the ceremony and I like this opportunity, but, before accepting this help, I would like to know in what name it is offered. If it's to help someone who is financially broke, then I cannot accept it, because I can afford a formal dress. I am living a tight budget life because I am saving money. If the help is for other reasons,  I would like to know.
 
@@ -115,11 +115,18 @@ Best regards,
 
 Bin Yong
 
-## MR, Sent: 
-## MR, Sent: 
+## MR, Sent: Thursday, May 23, 2024 
+`Two emails to try to find a time to do the purchase together.`
 
 ## Yong Bin, Sent: Sunday, May 26, 2024 12:48 AM
 
+Hi ████,
+
+Thank you for the email. I appreciate the help, but I have decided not to use school money to buy or rent clothes. Since my usual clothes are acceptable, I will wear my existing clothes to the ceremony, and I will choose something that looks a little more formal than my usual outfit.
+
+Best regards,
+
+Bin Yong
 
 
 # Email: 2021, Question about HW6
