--- a/article/公开我在瑞士的一些邮件.md
+++ b/article/公开我在瑞士的一些邮件.md
@@ -3,11 +3,27 @@
 
 # Index
 
+* [Email: 2024, Appeal my thesis grade - concerns to the grading report](#email-2024-appeal-my-thesis-grade---concerns-to-the-grading-report)
 * [Email: 2024, Meeting about reported inappropriate behaviors](#email-2024-meeting-about-reported-inappropriate-behaviors)
 * [Email: 2021, Question about HW6](#email-2021-question-about-hw6)
 * [4me.com: 2024, Stolen account](#4mecom-2024-stolen-account)
 * [4me.com: 2024, Request to modify my login security options](#4mecom-2024-request-to-modify-my-login-security-options)
 
+# Email: 2024, Appeal my thesis grade - concerns to the grading report
+
+## OMIITED
+
+## Yong Bin, Sent: Thursday, May 30, 2024 12:02 AM
+
+To: Decanato INF <decanato.inf@usi.ch>
+ 
+Dear Decanato,
+
+Thank you for the information. My concern has been forwarded to the Student Affairs Committee for evaluation for 16 days. Have they made any decisions about that? If not, am also very unsatisfied with the pace of our communication because it's been about 1 month since I delivered my signed letter on May 2nd and all I got was another 13 days to wait.
+
+Best regards,
+
+Bin Yong
 
 # Email: 2024, Meeting about reported inappropriate behaviors
 
