--- a/article/公开我在瑞士的一些邮件.md
+++ b/article/公开我在瑞士的一些邮件.md
@@ -25,6 +25,11 @@ Best regards,
 
 Bin Yong
 
+## OMIITED
+
+## Yong Bin, Sent: Thursday, May 31, 2024 11:57 PM
+OMIITED
+
 # Email: 2024, Meeting about reported inappropriate behaviors
 
 ## Yong Bin, Sent: Wednesday, May 8, 2024 11:56 PM
