--- a/article/公开我在瑞士的一些邮件.md
+++ b/article/公开我在瑞士的一些邮件.md
@@ -1,4 +1,5 @@
-#
+**后续内容更新到了[Codeberg](https://codeberg.org/yongbin/blog/src/branch/main/%E5%85%AC%E5%BC%80%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E7%9A%84%E4%B8%80%E4%BA%9B%E9%82%AE%E4%BB%B6/readme.md)**
+
 计划中,我选择公开的话题会更新全部我向学校发出的新内容,如果涉及隐私可能会做涂黑处理.原文如果发现typo可能会更正.
 
 # Index
